fix: fix the menu overflow

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -123,17 +123,20 @@
 
 	&__menu-list {
 		display: flex;
-		flex-direction: column;
+		column-gap: 32px;
+		flex-flow: column nowrap;
 		padding-top: 61px;
 		padding-left: 40px;
 		width: 100%;
 		row-gap: 41px;
 
 		@include desktop {
-			column-gap: 32px;
-			flex-direction: row;
+			flex-flow: row wrap;
+			justify-content: flex-end;
 			padding-top: 1px;
 			padding-right: 3px;
+			padding-left: 0;
+			row-gap: 10px;
 		}
 	}
 
